Fixed the jumpy tricon panel on entering a tricon for a location

--- a/app/styles/_merchantpanel.scss
+++ b/app/styles/_merchantpanel.scss
@@ -48,11 +48,13 @@
     @extend .center;
 
     color: $inverseStandard;
+    height: 80px;
 }
 
 .confirmCode {
     text-align: center;
     display: inline-flex;
+    height: 100px;
 }
 
 .triconBreak {
